# etso

./: .env.example  .gitignore  CLAUDE.md  DATABASE_SCHEMA_NOTES.md  PRD.md  README.md  TECH_SPECS.md  check_theme4_content.py  check_validation_results.py  complete_validation_theme4.py  config.py  dashboard.py  dashboard_old.py  database.py  deploy.py  enhanced_research.py  main.py  pyproject.toml  regenerate_and_validate_theme4.py  requirements.txt  run_dashboard.sh  run_validation_theme4.py  schema.sql  schema_setup.py  setup.py  setup_etso_database.sql  sql_builder.py  storage.py  test_connections.py  test_validation_fix.py  update_schema_claims.py  update_theme_titles.py  validation.py  wip_report.md
setup/: schema.sql  setup_etso_db.sql  setup_traffic_db.sql
static/css/: dashboard.css  dashboard_old.css
static/js/: dashboard.js  dashboard_old.js
templates/: dashboard.html
test/: test_complete_setup.py  test_traffic_connection.py
